--- a/151103Ukjin.md
+++ b/151103Ukjin.md
@@ -1,39 +1,46 @@
 <h1>Mac에 Fullstack 설치하기</h1>
 <ol>
-  <li>풀스택 디렉토리를 생성한다.</li>
+  <li>풀스택 디렉토리를 생성한다.
     <ul>
       <li>mkdir fullstack<br/>cd fullstack</li>
     </ul>
-  <li>OPENEDX_RELEASE 환경변수 설정</li>
+  </li>
+  <li>OPENEDX_RELEASE 환경변수 설정
     <ul>
       <li>export OPENEDX_RELEASE="open-release/eucalyptus.1"</li>
     </ul>
-  <li>설치 스크립트 다운로드 하기</li>
+  </li>
+  <li>설치 스크립트 다운로드 하기
     <ul>
       <li>curl -OL https://raw.github.com/edx/configuration/$OPENEDX_RELEASE/util/install/install_stack.sh</li>
     </ul>
-  <li>다운로드 받은 스크립트를 실행하자</li>
+  </li>
+  <li>다운로드 받은 스크립트를 실행하자
     <ul>
       <li>bash install_stack.sh fullstack</li>
     </ul>
+  </li>
 </ol>
 
 <h1>Windows에 Fullstack 설치하기</h1>
 <ol>
-  <li>Microsoft Visual C++ 2010 재배포 가능 패키지(x64 및 x86)  설치</li>
+  <li>Microsoft Visual C++ 2010 재배포 가능 패키지(x64 및 x86)  설치
     <ul>
       <li>https://www.microsoft.com/ko-kr/download/details.aspx?id=14632</li>
       <li>https://www.microsoft.com/ko-kr/download/confirmation.aspx?id=5555</li>
     </ul>
-  <li> 관리자 모드로 cmd창 실행</li>
+  </li>
+  <li> 관리자 모드로 cmd창 실행
     <ul>
       <li>검색창 -> cmd 입력 -> 명령 프롬프트 실행 아이콘에 우클릭 후 관리자 권한으로 실행</li>
     </ul>
-  <li>OPENEDX_RELEASE 환경변수 설정</li>
+  </li>
+  <li>OPENEDX_RELEASE 환경변수 설정
     <ul>
       <li>export OPENEDX_RELEASE="open-release/eucalyptus.1"</li>
     </ul>
-  <li>설치 스크립트 다운로드 및 설치</li>
+  </li>
+  <li>설치 스크립트 다운로드 및 설치
     <ul>
       <li>cd \ </li>
       <li>mkdir fullstack</li>
@@ -42,4 +49,6 @@
       <li>vagrant plugin install vagrant-hostsupdater</li>
       <li>vagrant up</li>
     </ul>
+  </li>
 </ol>
+
