--- a/151103Ukjin.md
+++ b/151103Ukjin.md
@@ -1,25 +1,40 @@
 <h1>Mac에 Fullstack 설치하기</h1>
 <ol>
-  <li>풀스택 디렉토리를 생성한다.
-    <ul>
-      <li>mkdir fullstack<br/>cd fullstack</li>
-    </ul>
-  </li>
+  <li>풀스택 디렉토리를 생성한다
+    <ol>
+      <li>mkdir fullstack</li>
+      <li>cd fullstack</li>
+    </ol>  
+  </li>    
   <li>OPENEDX_RELEASE 환경변수 설정
-    <ul>
+    <ol>
       <li>export OPENEDX_RELEASE="open-release/eucalyptus.1"</li>
-    </ul>
+    </ol>
   </li>
   <li>설치 스크립트 다운로드 하기
-    <ul>
+    <ol>
       <li>curl -OL https://raw.github.com/edx/configuration/$OPENEDX_RELEASE/util/install/install_stack.sh</li>
-    </ul>
+    </ol>
   </li>
   <li>다운로드 받은 스크립트를 실행하자
-    <ul>
+    <ol>
       <li>bash install_stack.sh fullstack</li>
-    </ul>
+    </ol>
   </li>
+  <li>vagrant 실행하고 접속하기
+    <ol>
+      <li>vagrant up</li>
+      <li>vagrant ssh</li>
+    </ol>
+  </li>  
+  
+  <li>접속후 브라우저에서 http://192.168.33.10/ 로 이동해보면 server error 발생<br/>
+        이유는 Ned Batchelder가 풀스택 박스를 잘못 만들었기 때문이다.(df -h 로 empty 확인가능) <br/>
+        또는 브라우저 때문일 수도 있다.(크롬을 사용하자) 
+    <ol>
+      <li>root디렉토리의 empty파일을 지우자. sudo rm -rf /empty</li>      
+    </ol>
+  </li>    
 </ol>
 
 <h1>Windows에 Fullstack 설치하기</h1>
@@ -51,4 +66,35 @@
     </ul>
   </li>
 </ol>
+
+<h1>precise64 설치</h1>
+<ol>
+  <li>Ubuntu12 박스추가
+    <ul>
+      <li>vagrant box add ubuntu/precise64</li>
+    </ul>
+  </li>
+  <li> vagrant 설정 
+    <ul>
+      <li>Vagrantfile 를 vi에디터로 열어서 다음의 주석을 해제 및 수정한다.</li>
+      <li>config.vm.network</li>
+      <li>config.vm.provider “virtual-box” ~ end</li>
+      <li>vb.memory = “2048”</li>
+      <li>vb.cpus = “2”</li>
+    </ul>
+  </li>
+  <li>vagrant 실행하고 접속하기
+    <ol>
+      <li>vagrant up</li>
+      <li>vagrant ssh</li>
+    </ol>
+  </li>  
+   <li>precise64 box upgrade 및 update 하기
+    <ol>
+      <li>upgrade는 맨처음 한번만 해주면 된다. <br/> sudo apt-get upgrade -y</li>
+      <li>update는 자주 해줄수록 좋다. <br/> sudo apt-get update -y</li>
+    </ol>
+  </li>  
+  </ol>
+
 
