--- a/151103Ukjin.md
+++ b/151103Ukjin.md
@@ -97,4 +97,41 @@
   </li>  
   </ol>
 
+#Devstack 설치
+
+1. nfsd 가 정상적으로 작동중인지부터 먼저 확인한다.
+   
+   sudo nfs status
+   
+   1) service는 사용가능하나 running이 아닐경우 nfsd를 동작시켜준다.
+      
+	sudo nfs start
+
+2. Devstack 작업할 디렉토리 생성하기
+
+   Mkdir devstack
+ 
+3. 환경변수를 설정
+
+   export OPENEDX_RELEASE="open-release/eucalyptus.2”
+
+4. 설치 스크립트 다운로드	
+	
+   curl -OL https://raw.github.com/edx/configuration/$OPENEDX_RELEASE/util/install/install_stack.sh
+
+5. devstack 가성머신을 생성하고 시작하기 위해 설치 스크립트 실행
+
+   bash install_stack.sh devstack
+	
+6. devstack 가성머신에 접속하기
+
+   vagrant ssh
+
+7. 에덱스어플 유저로 접속하기
+
+   sudo su edxapp    
+
+8. 에덱스 LMS 시작하기
+
+   paver devstack lms
 
