doc/lkb4000/냉이꽃.md updated from https://stackedit.io/

--- a/doc/lkb4000/냉이꽃.md
+++ b/doc/lkb4000/냉이꽃.md
@@ -11,16 +11,21 @@
   
 초가집이 섰던 자리에는  
 내 유년에 날아오던  
-돌멩이만 남고 황막하구나  
+돌멩이만 남고 황막(荒漠)하구나  
   
 울음으로도 다 채우지 못하는  
 내가 자란 마을에 피어난  
 너 여리운 풀은.
 
+---
+
+냉이꽃은들과밭에지천으로핀다.아무리척박한땅에도뿌리를내리고꽃을피운다.생명력은찬탄할만큼억세고질기다.흰머릿수건을두른듯한,순정한그꽃을가만히본적이있는가.
+
+이시는잡풀을뽑느라흘린어머니의땀이자라서냉이꽃이되었다고말한다.냉이꽃에어머니의인생을겹쳐놓았다.어머니는어떤분이었나.춘풍추우(春風秋雨)의그많은세월에굴곡이많아뜬눈으로밤을지새우셨다.노심초사하셨다.세상으로부터싸늘한시선의돌을맞으며사셨다.그때어머니의심경은겨울처럼사막처럼얼마나황막(荒漠)했을까.속울음을얼마나삼키셨을까.그러나매섭고독한세월을다이겨내고어머니는이토록환하게꽃으로피어나셨다.우리의들녘에는이러한어머니가,백민(白民)이참으로많다.
 
 ------
 
 좌판에 냉이 널려 봄 입맛 끌고 있으니 냉이꽃 곧 피어오르겠다. 눈 이불 덮은 여린 보리와 땅 속 봄심 지피는 달래와 함께 끓이면 까실하고 상큼했던 봄 여물. 시인이 직접 이 시 읊으니 우리 시대 재야운동 상징인 한 사상가 그대로 감읍하시데. 순정한 사회 부르려다 잠 못 든 평생 그대로 떠오르시는지. 들녘과 야산 한데에서 줄기차게 피어나는 냉이꽃, 그런 순정한 사상과 사람 있어 세상은 부패해도 그냥 썩어 문드러지지는 않는 것. <이경철·문학평론가>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTc1MTQzMjddfQ==
+eyJoaXN0b3J5IjpbLTE2NjMwMTY0MThdfQ==
 -->
