Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNW2+ZGfmkUXrf3HZE5z9H0",
+      "authorship_tag": "ABX9TyPhe58xv5VXP8m8wHpXxAT8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# cooper pair\n",
-        "\n",
+        "# Attractive force"
+      ],
+      "metadata": {
+        "id": "sUZBMaod0O1_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Schrodinger equation\n",
         "\n",
         "Wavefunction: $|x,t\\rangle \\equiv \\Psi(x,t)$\n",
@@ -60,8 +67,15 @@
         "$$\n",
         "H|x\\rangle =\n",
         "E|x\\rangle\n",
-        "$$\n",
-        "\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "-mC7vT8c0Xsx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## quantum harmonic oscillator\n",
         "\n",
         "![](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAQtzmQ2B0LBknmDjxYqGFuxcYlmkScvtMbyBLiGZkmdaZJDaYEny5Q7q0if3aEcVnnZA&usqp=CAU)\n",
@@ -118,9 +132,21 @@
         "\n",
         "만일 $n$이 실수 (예를 들면 1.5)라면, 에너지는 0.5, -0.5, -1.5, ... 등으로 $a$를 적용하면서 무한대로 낮아질 수 있다. 이것은 시스템의 에너지가 계속 낮아지면서 외부로 무한대의 에너지를 공급할 수 있으므로, 해가 될 수 없다. 따라서 $n$은 정수이고, $n=0$일 때, ground state가 된다. \n",
         "\n",
-        "![3: Diagram to represent the discrete energy levels of a quantum... |  Download Scientific Diagram](https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm)\n",
+        "![3: Diagram to represent the discrete energy levels of a quantum... |  Download Scientific Diagram](https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm){: width=\"20\"}\n",
+        "\n",
+        "\n",
         "See details:  \n",
         "https://www.mindnetwork.us/quantum-harmonic-oscillator-ladder-operators.html  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dAIHJoVF0d8f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -346,27 +372,33 @@
         "$$\n",
         "2nd perturbation term:\n",
         "$$\n",
-        "H_\\textup{eff} = {1\\over2}\\sum_{\\bf k,k',q} g_{\\bf k,q} g_{\\bf k',-q}\n",
+        "H_\\text{eff} = {1\\over2}\\sum_{\\bf k,k',q} g_{\\bf k,q} g_{\\bf k',-q}\n",
         "( y_{\\bf k',-q}-x_{\\bf k',-q} )\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\\\\\n",
-        "\\equiv \\sum_{\\bf k,k',q}  V_\\textup{eff}({\\bf k, k', q})\n",
+        "\\equiv \\sum_{\\bf k,k',q}  V_\\text{eff}({\\bf k, k', q})\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\n",
         "$$\n",
         "\n",
         "$$\n",
-        "V_{\\textup {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
-        "{w_{\\bf q}\\over\n",
+        "V_{\\text {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
+        "{\\omega_{\\bf q}\\over\n",
         "(E_{\\mathbf k'}-E_{\\bf k'-q})^2-\\omega^2_\\mathbf q\n",
         "}\n",
         "$$\n",
         "\n",
+        "ref: Electron-Phonon Coupling - Heid.pdf\n",
         "\n",
-        "\n",
-        "https://www.cond-mat.de/events/correl17/manuscripts/heid.pdf  \n",
-        "\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1w5yXnd8yYNr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## perturbation theory (quantum mechanics)\n",
         "\n",
         "Total Hamiltonian = Free particle Hamiltonian  + Interaction Hamiltonian\n",
@@ -670,11 +702,10 @@
         "[https://www.weizmann.ac.il/condmat/oreg/courses/concepts-condensed-matter-physics-spring-2020](https://www.weizmann.ac.il/condmat/oreg/courses/concepts-condensed-matter-physics-spring-2020)   \n",
         "\n",
         "to read later:  \n",
-        "https://portal.ifi.unicamp.br/images/files/graduacao/aulas-on-line/fen-emerg/lecture_notes_BCS.pdf  \n",
-        "\n"
+        "https://portal.ifi.unicamp.br/images/files/graduacao/aulas-on-line/fen-emerg/lecture_notes_BCS.pdf  \n"
       ],
       "metadata": {
-        "id": "1w5yXnd8yYNr"
+        "id": "90otvbJCz6iU"
       }
     },
     {
@@ -683,7 +714,7 @@
         ""
       ],
       "metadata": {
-        "id": "dBOHAqAtybou"
+        "id": "q-W0c0QRz7sA"
       },
       "execution_count": null,
       "outputs": []
