Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPhe58xv5VXP8m8wHpXxAT8",
+      "authorship_tag": "ABX9TyO7rFAr4vZ8yjtdErP/3Cq5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,7 +132,9 @@
         "\n",
         "만일 $n$이 실수 (예를 들면 1.5)라면, 에너지는 0.5, -0.5, -1.5, ... 등으로 $a$를 적용하면서 무한대로 낮아질 수 있다. 이것은 시스템의 에너지가 계속 낮아지면서 외부로 무한대의 에너지를 공급할 수 있으므로, 해가 될 수 없다. 따라서 $n$은 정수이고, $n=0$일 때, ground state가 된다. \n",
         "\n",
-        "![3: Diagram to represent the discrete energy levels of a quantum... |  Download Scientific Diagram](https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm){: width=\"20\"}\n",
+        "<div>\n",
+        "<img src=\"https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "\n",
         "See details:  \n",
@@ -153,7 +155,9 @@
         "\n",
         "## phonon \n",
         "\n",
-        "![https://imgur.com/a/28NxrZb](https://i.imgur.com/44ANiKN.png)  \n",
+        "<div>\n",
+        "<img src=\"https://i.imgur.com/44ANiKN.png\" label=\"https://imgur.com/a/28NxrZb\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "$x_j$: Displacement from lattice points  \n",
         "The hamiltonian:  \n",
