Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO7rFAr4vZ8yjtdErP/3Cq5",
+      "authorship_tag": "ABX9TyPXIXwbkwJ9N0mx1JFvuHYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,21 +155,39 @@
         "\n",
         "## phonon \n",
         "\n",
+        "여러개의 atom이 스프링으로 연결된 격자 모델을 고려한다.  \n",
+        "Phonon은 atom의 진동에 의한 sound wave가 양자화 된 것을 말한다. \n",
+        "\n",
         "<div>\n",
         "<img src=\"https://i.imgur.com/44ANiKN.png\" label=\"https://imgur.com/a/28NxrZb\" width=\"500\"/>\n",
         "</div>\n",
         "\n",
         "$x_j$: Displacement from lattice points  \n",
-        "The hamiltonian:  \n",
+        "\n",
+        "Hamiltonian은 다음과 같다.\n",
+        "  \n",
         "$$H = \\sum_j{p_j^2\\over2m}+{1\\over2}K(x_{j+1}-x_j)^2$$\n",
-        "Fourier transform (descrete):  $$\n",
+        "여기서 x와 p는 field이다.  \n",
+        "왜냐하면 전공간(정확하게는 lattice points)에서 x와 p가 정의되기 때문이다.  \n",
+        "Descrete Fourier transform을 통하여 x와 p를 wavevector $k$에 대하여 분해한다.  \n",
+        "N개의 lattice마다 반복되는 periodic boundary condition을 가정한다. \n",
+        "$$\n",
         "\\begin{align*}\n",
         "x_j &= {1\\over\\sqrt N}\\sum_k x_ke^{ikja}\\\\\n",
-        "p_j &= {1\\over\\sqrt N}\\sum_k p_ke^{ikja}\\\\\n",
+        "p_j &= {1\\over\\sqrt N}\\sum_k p_ke^{ikja}\n",
+        "\\end{align*}\n",
+        "$$\n",
+        "위치-운동량 양자화\n",
+        "$$\n",
+        "\\begin{align*}\n",
         "[x_j,p_{j'}] &=i\\delta_{jj'}\\\\\n",
         "[x_k,p_{k'}] &= i\\delta_{k,-k'}\\\\\n",
         "\\end{align*}\n",
-        "$$ $$\n",
+        "$$\n",
+        "  \n",
+        "Fourier 변환을 이용하여 계산하면 다음과 같다.\n",
+        "  \n",
+        "$$\n",
         "\\sum_j p_j^2 = \\sum_k p_kp_{-k}\n",
         "$$ $$\n",
         "\\sum_j(x_{j+1}-x_j)^2 = \n",
@@ -178,15 +196,17 @@
         "H = \\sum_k\\left[\n",
         "{1\\over2m}p_kp_{-k}+{1\\over2}m\\omega_k^2x_kx_{-k}\n",
         "\\right]\\\\[0.3em]\n",
-        "w_k^2=(4K/m)\\sin^2(ka/2)\n",
+        "\\omega_k^2\\equiv(4K/m)\\sin^2(ka/2)\n",
         "$$ $$\n",
         "\\begin{align*}\n",
         "a_k &=\\sqrt{m\\omega_k\\over2}\n",
         "\\left(x_k+i{p_k\\over m\\omega_k}\\right)\\\\\n",
         "a^\\dagger_k &=\\sqrt{m\\omega_k\\over2}\n",
         "\\left(x_{-k}-i{p_{-k}\\over m\\omega_k}\\right)\n",
-        "\\end{align*}\\\\\n",
-        "\\ [a_k, a^\\dagger_{k'}] = \\delta_{k,k'}\\\\\n",
+        "\\end{align*}$$\n",
+        "2nd quantization:  \n",
+        "$$\n",
+        "[a_k, a^\\dagger_{k'}] = \\delta_{k,k'}\\\\\n",
         "x_k = {1\\over\\sqrt{2m\\omega_k}}(a_k+a^\\dagger_{-k})\n",
         "$$ $$\n",
         "H = \\sum_k\\omega_k\\left(\n",
@@ -196,24 +216,7 @@
         "ref:  lancaster  \n",
         "(error fixed in the definition of $a^\\dagger_k$)\n",
         "\n",
-        "## Different convention:  (ref: Farbrizio)  \n",
-        "**ToDo**\n",
         "\n",
-        "With proper normalization with $x$ and $p$ and set $\\hbar=1$.\n",
-        "$$\n",
-        "x_k = {1\\over\\sqrt 2}(a_k+a^\\dagger_{-k})\\\\\n",
-        "p_k = -{i\\over\\sqrt2}(a_k-a^\\dagger_{-k})\n",
-        "$$\n",
-        "$$\n",
-        "D(k, t) = -i\\langle T(x_k(t)x_{-k})\\rangle\n",
-        "$$\n",
-        "$$\n",
-        "-iD(k, t) = -{1\\over2}\\langle a_k(t)a^\\dagger_k\\rangle\n",
-        "-{1\\over2}\\langle a^\\dagger_{-k}(t)a_{-k}\\rangle\n",
-        "$$\n",
-        "$$\n",
-        "b(w_k) = \\langle a^\\dagger_ka_k\\rangle={1\\over e^{w_k\\beta}-1}\n",
-        "$$\n",
         "\n",
         "\n",
         "\n",
@@ -713,12 +716,38 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Different convention:  (ref: Farbrizio)  \n",
+        "**ToDo**\n",
+        "\n",
+        "With proper normalization with $x$ and $p$ and set $\\hbar=1$.\n",
+        "$$\n",
+        "x_k = {1\\over\\sqrt 2}(a_k+a^\\dagger_{-k})\\\\\n",
+        "p_k = -{i\\over\\sqrt2}(a_k-a^\\dagger_{-k})\n",
+        "$$\n",
+        "$$\n",
+        "D(k, t) = -i\\langle T(x_k(t)x_{-k})\\rangle\n",
+        "$$\n",
+        "$$\n",
+        "-iD(k, t) = -{1\\over2}\\langle a_k(t)a^\\dagger_k\\rangle\n",
+        "-{1\\over2}\\langle a^\\dagger_{-k}(t)a_{-k}\\rangle\n",
+        "$$\n",
+        "$$\n",
+        "b(w_k) = \\langle a^\\dagger_ka_k\\rangle={1\\over e^{w_k\\beta}-1}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "9KuKYnZ4NziU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "q-W0c0QRz7sA"
+        "id": "maDJL1veN0Rn"
       },
       "execution_count": null,
       "outputs": []
