Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXIXwbkwJ9N0mx1JFvuHYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,14 +147,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Phonon \n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "## phonon \n",
-        "\n",
-        "여러개의 atom이 스프링으로 연결된 격자 모델을 고려한다.  \n",
+        "여러개의 atom이 스프링으로 연결된 격자 모델에 의한 sound wave. \n",
         "Phonon은 atom의 진동에 의한 sound wave가 양자화 된 것을 말한다. \n",
         "\n",
         "<div>\n",
@@ -215,10 +209,6 @@
         "$$\n",
         "ref:  lancaster  \n",
         "(error fixed in the definition of $a^\\dagger_k$)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "## 3-dimensional phonon with vibration mode ($s$)\n",
         "\n",
@@ -348,7 +338,9 @@
         "+\\sum_{\\bf q}\\omega_{\\bf q}\\left(a^\\dagger_{\\bf q}a_{\\bf q}+{1\\over2}\\right)\n",
         "+\\sum_{\\bf k,q}g_{\\bf k,q}c^\\dagger_{\\bf k+q}c_{\\bf k}(a_{\\bf q}+a^\\dagger_{\\bf -q})\n",
         "$$\n",
-        "$\\eta H_1\\to H_{e-ph}, \\eta S\\to S$로 놓고, 이제 $S$를 다음과 같이 추정한다.\n",
+        "  \n",
+        "$\\eta H_1\\to H_{e-ph}, \\eta S\\to S$로 놓고, 이제 $S$를 다음과 같이 추정(ansatz)한다.  \n",
+        "    \n",
         "$$\n",
         "S = \\sum_{\\bf k,q}g_{\\bf k,q}c^\\dagger_{\\bf k+q}c_{\\bf k}(x_{\\bf kq}a_{\\bf q}+y_{\\bf kq}a^\\dagger_{\\bf -q})\n",
         "$$\n",
@@ -372,12 +364,14 @@
         "a^\\dagger_{\\bf -q}\n",
         "\\right]\n",
         "$$\n",
-        "Thus,\n",
+        "  \n",
+        "위의 식이 0이되어야 하는 조건으로부터  $S$를 구할 수 있다. \n",
+        "  \n",
         "$$\n",
         "x_{\\bf kq} = (\\epsilon_{\\bf k}-\\epsilon_{\\bf k+q}+\\omega_{\\bf q})^{-1}\\\\\n",
         "y_{\\bf kq} = (\\epsilon_{\\bf k}-\\epsilon_{\\bf k+q}-\\omega_{\\bf q})^{-1}\n",
         "$$\n",
-        "2nd perturbation term:\n",
+        "이제 2nd perturbation term을 구한다.\n",
         "$$\n",
         "H_\\text{eff} = {1\\over2}\\sum_{\\bf k,k',q} g_{\\bf k,q} g_{\\bf k',-q}\n",
         "( y_{\\bf k',-q}-x_{\\bf k',-q} )\n",
@@ -401,6 +395,25 @@
       ],
       "metadata": {
         "id": "1w5yXnd8yYNr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Perturbation 2차항의 의미  \n",
+        "\n",
+        "perturbation theory (quantum mechanics) 섹션 참고:  \n",
+        "\n",
+        "$$\n",
+        "\\require{color}\n",
+        "E = E_0+\\langle\\psi_0|H_I|\\psi_0\\rangle+\\color{red}{\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle}\\\\\n",
+        "+\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle\n",
+        "+\\cdots\n",
+        "$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "iL1AS2JN8Tp9"
       }
     },
     {
