Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -410,7 +410,36 @@
         "+\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle\n",
         "+\\cdots\n",
         "$$\n",
-        "\n"
+        "\n",
+        "2차 perturabtion $H_I^2$ 중에서 생성, 소멸 연산자만 뽑아보면 다음과 같다.  \n",
+        "\n",
+        "$$\n",
+        "E\\propto c^\\dagger_{k'-q}c^\\dagger_{k+q}a_{q}a^\\dagger_{q}c_{k'}c_{k}\n",
+        "$$ \n",
+        "\n",
+        "$c_{k}, c_{k'}$는 $k,k'$의 momentum을 가진 전자 두 개의 incoming(or annhilation)을 의미한다.  \n",
+        "$a^\\dagger_q, a_{q}$는 중계하는 phonon(momentum $q$)의 생성과 소멸을 의미한다.  \n",
+        "$c^\\dagger_{k+q}, c^\\dagger_{k'-q}$는 두 전자의 outcoming(or creation)이다.  \n",
+        "\n",
+        "Phonon을 매개로하는 두 electron의 interaction을 Feynman diagram으로 표시하면 다음과 같다.   \n",
+        "($\\sigma,\\sigma'$는 두 전자의 spin을 의미하고 $s$는 phonon의 vibration mode를 의미한다.)    \n",
+        "\n",
+        "<div>\n",
+        "<img src=\"https://i.imgur.com/zGJf53r.png\" label=\"https://imgur.com/zGJf53r\" width=\"400\"/>\n",
+        "</div>\n",
+        "\n",
+        "Electron-electron interaction의 크기:  \n",
+        "\n",
+        "$$\n",
+        "V_{\\text {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
+        "{\\omega_{\\bf q}\\over\n",
+        "(E_{\\mathbf k'}-E_{\\bf k'-q})^2-\\omega^2_\\mathbf q\n",
+        "}\n",
+        "$$\n",
+        "\n",
+        "전자의 에너지는 $E_{\\bf k} = {\\mathbf k^2\\over 2m}$이다.  \n",
+        "$\\omega_\\mathbf q$는 virtual phonon의 에너지라서 일반적으로 $|E_{\\mathbf k'}-E_{\\bf k'-q}|$와 같지 않다.  \n",
+        "$|E_{\\mathbf k'}-E_{\\bf k'-q}| < \\omega_q$일 경우 $V_\\text{eff}$는 음수가 되어서 attractive force가 되고, 반대의 경우 repulsive force가 된다.  \n"
       ],
       "metadata": {
         "id": "iL1AS2JN8Tp9"
