Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -246,7 +247,7 @@
         "$V$: potential with lattice atomic system  \n",
         "$\\bf R$: Lattice points ($=ja$)  \n",
         "$\\bf r_R$: displacement from lattice points  \n",
-        "$\\bf X = R+r_R$: absolute position  \n",
+        "$\\bf X = R+r_R$: absolute position of atoms \n",
         "Hamiltonian:  \n",
         "$$\n",
         "H = \\int d^3x{1\\over N}\\sum_{\\bf R}\\rho(\\mathbf x)V({\\bf x-X)}\\tag{3.47}\n",
@@ -400,13 +401,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Perturbation 2차항의 의미  \n",
+        "## Perturbation 2차항의 의미  \n",
         "\n",
         "perturbation theory (quantum mechanics) 섹션 참고:  \n",
         "\n",
         "$$\n",
         "\\require{color}\n",
-        "E = E_0+\\langle\\psi_0|H_I|\\psi_0\\rangle+\\color{red}{\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle}\\\\\n",
+        "E = E_0+\\langle\\psi_0|H_I|\\psi_0\\rangle+\\color{blue}{\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle}\\\\\n",
         "+\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle\n",
         "+\\cdots\n",
         "$$\n",
@@ -443,6 +444,101 @@
       ],
       "metadata": {
         "id": "iL1AS2JN8Tp9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Electron near Fermi level\n",
+        "\n",
+        "**Fermi sea**  \n",
+        "\n",
+        "Box내에서 전자의 momentum $k$는 ${2\\pi\\over L}, {2\\cdot2\\pi\\over L}, {3\\cdot2\\pi\\over L}, ...$의 값을 가질 수 있다.  \n",
+        "절대 0도에서 fermion인 전자는 가장 낮은 에너지 레벨부터 두개씩(spin up과 down) 차례로 채우게 된다.  \n",
+        "$E = {k^2\\over 2m}$ 이므로, momentum 공간에서 구형 내부를 차지한다.  \n",
+        "\n",
+        "![](https://qph.fs.quoracdn.net/main-qimg-534cf8ce680aea4b6ace5b4edd1ce2ff.webp) \n",
+        "\n",
+        "**Momentum distribution at low temperature**  \n",
+        "\n",
+        "저온에서 전자의 excited state는 모두 Fermi surface의 에너지인 Fermi energe $\\epsilon_F$의 부근에 모여있게 된다. \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "G4s6BjiAZrzC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Density of states in Debye model \n",
+        "\n",
+        "<div>\n",
+        "<img src=\"https://www.researchgate.net/profile/Masatsugu-Suzuki-3/publication/278020916/figure/fig6/AS:669698907725826@1536680070438/Fig-Density-of-states-in-the-Debye-model.png\"  width=\"400\"/>\n",
+        "</div>\n",
+        "\n",
+        "Typical Debye frequency(energy) of metal: $\\hbar\\omega_D =$ 100K ~ 500K (ref: Ivanov)  "
+      ],
+      "metadata": {
+        "id": "IyIWo0VxXMm-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Attractive force의 기원\n",
+        "\n",
+        "<div>\n",
+        "<img src=\"https://i.imgur.com/f7aFk6j.png\" label=\"Annette\" width=\"400\"/>\n",
+        "</div>\n",
+        "\n",
+        "두개의 전자가 phonon에 의에 매개될 때, scattering 전,후의 에너지는 Fermi 에너지 $\\epsilon_F$로부터 $\\pm kT$ 범위에 있다.  \n",
+        "온도가 Debye frequency의 범위보다 낮다면, interaction은 attractive이다.  \n",
+        "대략적으로 phonon의 frequency는 $\\omega_D$라고 평균할 수 있다.    \n",
+        "\n",
+        "이럴 경우 effective potential은 다음과 같다.\n",
+        "$$\n",
+        "V_{\\text {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
+        "{\\omega_D\\over\n",
+        "(E_{\\mathbf k'}-E_{\\bf k'-q})^2-\\omega^2_D}\n",
+        "$$\n",
+        "\n",
+        "이러한 attractive force의 기원은 다음과 같다.\n",
+        "\n",
+        "첫째, 유한한 부피를 가진 metal내의 free electron은 상당히 큰 절대0도 Fermi energy를 갖는다.  \n",
+        "이 때문에, interaction하는 electron의 momentum은 이 부근에 모여있다.  \n",
+        "(평균 에너지=$\\epsilon_F=10^4K$)  \n",
+        "\n",
+        "둘째, phonon을 매개로하는 두 electron은 interaction 후에도 여전히 Fermi surface부근에 모여 있어야 한다.  \n",
+        "Fermi sea의 내부가 이미 다른 ground state들로 가득차 있기 때문이다. \n",
+        "\n",
+        "셋째, scattering 전,후의 에너지 변화가 작을 경우(Debye 에너지보다 작을 경우), effective potential은 음수 즉, attractive force를 형성한다.  \n",
+        "\n",
+        "이러한 현상은 저온의 금속 내의 free electron에서 발생한다.  \n",
+        "\n",
+        "금속내 전자의 attractive force는 Frohlich(1950, 1952), Bardeen과 Pines(1955) 그리고 Pines(1959) 등에 의하여 발표되었다.  "
+      ],
+      "metadata": {
+        "id": "uBcoRkeRPlk_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cooper pair"
+      ],
+      "metadata": {
+        "id": "dGp6hFpRY6ez"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Appendix"
+      ],
+      "metadata": {
+        "id": "EYfJBqEcXrZL"
       }
     },
     {
