Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -515,7 +515,9 @@
         "\n",
         "셋째, scattering 전,후의 에너지 변화가 작을 경우(Debye 에너지보다 작을 경우), effective potential은 음수 즉, attractive force를 형성한다.  \n",
         "\n",
-        "이러한 현상은 저온의 금속 내의 free electron에서 발생한다.  \n",
+        "넷째, 전자가 atom system을 지나갈 때의 time scale은 $\\epsilon_F^{-1}$이다.  \n",
+        "atom이 활성화(excited states)된 후 지속시간은 $\\omega_D^{-1}$이다.   \n",
+        "따라서 첫번째 전자가 지나간 후 한참 뒤에 두번째 전자가 이 excited state와 interact할 수 있다. 이 지연된(retarded) interaction은 Coulomb force에 의한 replusive interaction을 크게 감소시킨다.    \n",
         "\n",
         "금속내 전자의 attractive force는 Frohlich(1950, 1952), Bardeen과 Pines(1955) 그리고 Pines(1959) 등에 의하여 발표되었다.  "
       ],
@@ -530,6 +532,47 @@
       ],
       "metadata": {
         "id": "dGp6hFpRY6ez"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Impurities\n"
+      ],
+      "metadata": {
+        "id": "o9NqdvBj8Ho_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Manybody\n",
+        "\n",
+        "How does the BCS theory explain superconductivity? The first thing to realize is that in superconductors, it is not that the electrons suddenly become immune from scattering off impurities and off each other (the effect that gives electrical resistance in\n",
+        "63\n",
+        "Pairing upa normal metal), it is simply that scattering does not affect conduction. The two electrons in a superconducting pair have equal and opposite momentum with respect to each other, although the pair as a whole can glide through a sample when a current flows. All the pairs are locked together and glide at the same speed. If a pair scatters with a phonon, then the two electrons may change their individual momenta but the gliding of the pair along the current direction continues completely unaffected. In effect, a pair state scatters into another pair state. This occurs because there is a very great energy saving for keeping all pairs moving with identical speeds. It costs too much energy to knock a pair out of line with all the others. The electrical current represented by this uniformly gliding assembly of electrons,\n",
+        "once started, can continue forever. [^Blundell]  \n",
+        "\n",
+        "[^Blundell]: Superconductivity A Very Short Introduction by Stephen J. Blundell  "
+      ],
+      "metadata": {
+        "id": "La719DFH8Lg4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here's a simple footnote,[^1] and here's a longer one.[^bignote]\n",
+        "\n",
+        "[^1]: This is the first footnote.\n",
+        "\n",
+        "[^bignote]: Here's one with multiple paragraphs and code.\n",
+        "    Indent paragraphs to include them in the footnote.\n",
+        "    `{ my code }`\n",
+        "    Add as many paragraphs as you like."
+      ],
+      "metadata": {
+        "id": "wXNqLrXSBVjU"
       }
     },
     {
