Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -552,8 +552,7 @@
         "63\n",
         "Pairing upa normal metal), it is simply that scattering does not affect conduction. The two electrons in a superconducting pair have equal and opposite momentum with respect to each other, although the pair as a whole can glide through a sample when a current flows. All the pairs are locked together and glide at the same speed. If a pair scatters with a phonon, then the two electrons may change their individual momenta but the gliding of the pair along the current direction continues completely unaffected. In effect, a pair state scatters into another pair state. This occurs because there is a very great energy saving for keeping all pairs moving with identical speeds. It costs too much energy to knock a pair out of line with all the others. The electrical current represented by this uniformly gliding assembly of electrons,\n",
         "once started, can continue forever. [^Blundell]  \n",
-        "\n",
-        "[^Blundell]: Superconductivity A Very Short Introduction by Stephen J. Blundell  "
+        "\n"
       ],
       "metadata": {
         "id": "La719DFH8Lg4"
@@ -562,17 +561,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here's a simple footnote,[^1] and here's a longer one.[^bignote]\n",
+        "# Reference\n",
         "\n",
-        "[^1]: This is the first footnote.\n",
-        "\n",
-        "[^bignote]: Here's one with multiple paragraphs and code.\n",
-        "    Indent paragraphs to include them in the footnote.\n",
-        "    `{ my code }`\n",
-        "    Add as many paragraphs as you like."
+        "[^Blundell]: Superconductivity A Very Short Introduction by Stephen J. Blundell  "
       ],
       "metadata": {
-        "id": "wXNqLrXSBVjU"
+        "id": "8U5NfabPCKPS"
       }
     },
     {
