--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -537,6 +537,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Ground state of two electron\n",
+        "\n",
+        "1. 두 전자의 momentum이 반대일 경우, 총 momentum의 합이 0이 되므로 두 입자의 총 에너지는 ground state에 가깝게 된다.  \n",
+        "\n",
+        "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다. \n",
+        "\n",
+        "Finally, remember that the exchange hole weakens the interactions. We already encountered this in the chapter on electrons and phonons, studying the effects of electron-electron interactions. These exchange interactions will also in the present case weaken the glue between electrons, but they are only present between electrons with the same spin. So, the attraction will be strongest if the electrons not only have opposite momentum, but also opposite spin.[^MFYS]\n",
+        "\n",
+        "A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.[^Margin]\n",
+        "\n",
+        "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics\n",
+        "[^Margin]: Superconductivity An introduction - Mangin, Kahn"
+      ],
+      "metadata": {
+        "id": "6G_YyB9DTBdP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Impurities\n"
       ],
       "metadata": {
